show extended github yaml

--- a/samples/pipeline.yaml
+++ b/samples/pipeline.yaml
@@ -71,3 +71,21 @@ jobs:
     runs-on: ubuntu
     steps:
       - run: go build
+
+---
+
+# sample github pipeline, with the extended
+# harness sytnax. This pipeline includes a
+# Harness template step, even though GitHub
+# has zero concept of templates.
+
+jobs:
+  test:
+    runs-on: ubuntu
+    steps:
+      - run: go build
+      - template:
+          uses: account.docker
+          with:
+            repo: harness/hello-world
+            tags: latest
