--- a/samples/step-approval.yaml
+++ b/samples/step-approval.yaml
@@ -1,1 +1,12 @@
-# TODO
+# simple approval step.
+
+pipeline:
+  stages:
+  - steps:
+    - run: go build
+    - approval:
+        uses: jira
+        with:
+          connector: account.jira
+          project: PROJ
+    - run: go test
