update pipeline sample to reflect repo change

--- a/samples/pipeline.yaml
+++ b/samples/pipeline.yaml
@@ -55,7 +55,7 @@ pipeline:
   # repository should be optional. If undefined,
   # the repository and conector are the same as
   # where the yaml was stored.
-  repository:
+  repo:
     name: drone/drone
     connector: account.github
   stages:
