--- a/samples/example-kubernetes-rolling.yaml
+++ b/samples/example-kubernetes-rolling.yaml
@@ -1,19 +1,48 @@
+# kubernetes rolling pipeline
+
 pipeline:
+  inputs:
+    skip_dry_run:
+      type: boolean
+      default: false
+
   stages:
   - service: petstore
+    environment: prod
     steps:
-    # previously the rollout step was responsible
-    # for cloning and download necessary files. The
-    # download is now fully de-coupled from the
-    # kubernetes rollout.
+    # download manifest related to defines service.
     - action:
-        uses: clone
-        with:
-          repo: harness/manifests
-    # kubernetes rollout is shipped as a plugin
-    # instead of a generic rollout step.
+        uses: manifest-download
+    # apply manifest templates.
     - action:
-        uses: kubernetes-rolling
+        uses: manifest-bake
+    # execute a kubernetes apply dry run.
+    - action:
+        uses: kubernetes-rolling-deploy
         with:
-          dry_run: true
-          pruning: on
+          dry-run: true
+    # approve deployment.
+    - approval:
+        uses: harness-ui
+        with:
+          timeout: 30m
+          message: "this is an approval prompt"
+          groups: [ "admins", "ops" ]
+          auto-reject: true
+          self-approval: false
+          print-execution-history: true
+          min-approvers: 1
+    # kubernetes apply with rolling deploy strategy.
+    - action:
+        uses: kubernetes-rolling-deploy
+        with:
+          dry-run: ${{ inputs.skip_dry_run }}
+          dry-run-before-deploy: false
+    # kubernetes delete / cleanup
+    - action:
+        uses: kubernetes-delete
+        with:
+          manifest: path/to/manifest
+          release: release-name
+          resource: resource-name
+          namespace: true
