--- a/samples/stage.yaml
+++ b/samples/stage.yaml
@@ -94,7 +94,7 @@ pipeline:
 
 ---
 
-# simple stage, with single service, single environment (coming soon)
+# simple stage, with single service, single environment
 
 pipeline:
   stages:
@@ -102,10 +102,11 @@ pipeline:
     - run:
         script: go build
     service: petstore
+    environment: prod
 
 ---
 
-# simple stage, with multi-service, multi-environment (coming soon)
+# simple stage, with multi-service, multi-environment
 
 pipeline:
   stages:
@@ -116,3 +117,40 @@ pipeline:
       items:
       - petstore-frontend
       - petstore-backend
+    environment:
+      parallel: true
+      items:
+      - name: prod
+        deploy-to: all
+      - name: stage
+        deploy-to:
+        - infra1
+        - infra2
+      - name: dev
+        deploy-to: infra3
+
+---
+
+# service and environment at the pipeline level,
+# allows us to remove propagation configuration.
+
+
+pipeline:
+  service:
+    items:
+    - petstore-frontend
+    - petstore-backend
+  environment:
+    parallel: true
+    items:
+    - name: prod
+      deploy-to: all
+  stages:
+  # override the service and environment
+  # at the stage level.
+  - service: petstore 
+    environment: prod
+    steps:
+    - run:
+        script: go build
+
