Updated with Brad Feedback!

--- a/samples/dynamic-provisioned-infra.yaml
+++ b/samples/dynamic-provisioned-infra.yaml
@@ -1,69 +1,16 @@
-pipeline:
-  inputs:
-    skip_dry_run:
-      type: boolean
-      default: false
+##
 
-  stages:
-  - service: petstore
-    environment: prod
-    steps:
-    # download manifest related to defines service.
-    - action:
-        uses: manifest-download
-    # apply manifest templates.
-    - action:
-        uses: manifest-bake
-    # execute a kubernetes apply dry run.
-    - action:
-        uses: terraform-provisioner
-        with:
-          plan: true
-          command: apply
-          provisionerIdentifier: <+service.name>-<+env.name>
-          secretsStore: "Harness Secrets Manager"
-          workspace: #optional
-          awsAuth: #optional
-          region: #optional
-          roleArn: #optional
-    # approve deployment.
-    - approval:
-        uses: harness-ui
-        with:
-          timeout: 30m
-          message: "this is an approval prompt"
-          groups: [ "admins", "ops" ]
-          auto-reject: true
-          self-approval: false
-          print-execution-history: true
-          min-approvers: 1
-    - action:
-        uses: terraform-provisioner
-        with:
-          plan: false
-          command: apply
-          provisionerIdentifier: <+service.name>-<+env.name>
-          secretsStore: "Harness Secrets Manager"
-          workspace: #optional
-          awsAuth: #optional
-          region: #optional
-          roleArn: #optional
-          inheritPlan: true
-          encryptPlanJson: false #optional
-          commandLine: #optional
-            apply: -some-command
-    - action:
-        uses: terraform-provisioner
-        with:
-          plan: false
-          command: destroy
-          provisionerIdentifier: <+service.name>-<+env.name>
-          secretsStore: "Harness Secrets Manager"
-          workspace: #optional
-          awsAuth: #optional
-          region: #optional
-          roleArn: #optional
-          inheritPlan: true
-          encryptPlanJson: false #optional
-          commandLine: #optional
-            apply: -some-command
+# group: 
+#   step: 
+#     terraform plan - Run Step
+#     terraform apply
+#     sets Infra
+#       set Connector
+#       set env
+
+# > Connector
+# > Env
+# > Infra 
+
+# - Terraform Steps
+
