--- a/samples/example-kubernetes-canary.yaml
+++ b/samples/example-kubernetes-canary.yaml
@@ -20,6 +20,8 @@ pipeline:
     - action:
         uses: kubernetes-canary-deploy
         with:
+          count-type: instances | percentage
+          weight: 5 | 10% 
           dry-run: false
    # executes a canary delete 
     - action:
