"here is the dynamic provisioned"

--- a/samples/dynamic-provisioned-infra.yaml
+++ b/samples/dynamic-provisioned-infra.yaml
@@ -14,3 +14,23 @@
 
 # - Terraform Steps
 
+pipeline:
+  stages:
+  - steps:
+    - action: 
+        uses: harness/terraform
+        with:
+          plan: true
+          command: apply
+    - action: 
+        uses: harness/terraform
+        with:
+          plan: false
+          command: apply
+    - action:
+        uses: harness/dynamic-environment
+        with: 
+          environment: "dev" 
+          infrastructure: "k8s-dev"
+          connector: <+terraform.output.connectorName> #connector identifier
+          namespace: <+sterraform.output.namespace> # Service Now Ticket Type
