--- a/samples/example-kubernetes-canary.yaml
+++ b/samples/example-kubernetes-canary.yaml
@@ -30,7 +30,7 @@ pipeline:
           dry-run: false
     # approve deployment.
     - approval:
-        uses: harness-ui
+        uses: harness
         with:
           timeout: 30m
           message: "this is an approval prompt"
