--- a/samples/stage-parallel.yaml
+++ b/samples/stage-parallel.yaml
@@ -26,3 +26,16 @@ pipeline:
       - steps:
         - run: npm run
         - run: npm test
+
+# parallel stage group, with conditional execution
+
+pipeline:
+  stages:
+  - if: ${{ branch == "main" }}
+    parallel:
+      - steps:
+        - run: go build
+        - run: go test
+      - steps:
+        - run: npm run
+        - run: npm test
